-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.1
-
None
-
Debian 6.1.119-1 (2024-11-22) x86_64 GNU/Linux
libsodium 1.0.20
-
-
b884fbf10 (dev), d39c49339 (6.9), bb81ac778 (6.8)
Ld error when linking libsodium
wasm-ld: error: duplicate symbol: blake2b_init_param
>>> defined in /home/valaczka/libsodium-1.0.20/libsodium-js/lib/libsodium.a(libsodium_la-blake2b-ref.o)
>>> defined in /home/valaczka/Qt/6.8.1/wasm_singlethread/lib/libQt6Core.a(qcryptographichash.cpp.o)
wasm-ld: error: duplicate symbol: blake2b_init
>>> defined in /home/valaczka/libsodium-1.0.20/libsodium-js/lib/libsodium.a(libsodium_la-blake2b-ref.o)
>>> defined in /home/valaczka/Qt/6.8.1/wasm_singlethread/lib/libQt6Core.a(qcryptographichash.cpp.o)
wasm-ld: error: duplicate symbol: blake2b_init_key
>>> defined in /home/valaczka/libsodium-1.0.20/libsodium-js/lib/libsodium.a(libsodium_la-blake2b-ref.o)
>>> defined in /home/valaczka/Qt/6.8.1/wasm_singlethread/lib/libQt6Core.a(qcryptographichash.cpp.o)
wasm-ld: error: duplicate symbol: blake2b_final
>>> defined in /home/valaczka/libsodium-1.0.20/libsodium-js/lib/libsodium.a(libsodium_la-blake2b-ref.o)
>>> defined in /home/valaczka/Qt/6.8.1/wasm_singlethread/lib/libQt6Core.a(qcryptographichash.cpp.o)
em++: error: '/home/valaczka/emscripten/emsdk/upstream/bin/wasm-ld @/tmp/emscripten_p1maxkpu.rsp.utf-8' failed (returned 1)